--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
       }
     </style>
   <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.1.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
-    "react/": "https://esm.sh/react@^19.1.0/",
-    "icons/": "https://esm.sh/icons@^1.0.0/",
-    "components/": "https://esm.sh/components@^0.1.0/",
-    "src": "https://esm.sh/src@^1.1.2",
-    "src/": "https://esm.sh/src@^1.1.2/"
+  {
+    "imports": {
+      "react": "https://esm.sh/react@18.2.0",
+      "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+      "react-dom/": "https://esm.sh/react-dom@18.2.0/",
+      "react/": "https://esm.sh/react@18.2.0/"
+    }
   }
-}
-</script>
+  </script>
+<!-- Load Babel to transpile JSX in the browser -->
+<script src="https://unpkg.com/@babel/standalone@7.24.7/babel.min.js"></script>
 <link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-white dark:bg-slate-900 antialiased">
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <!-- Set type to "text/babel" and add data-presets to enable transpilation -->
+    <script type="text/babel" data-type="module" data-presets="react,typescript" src="./index.tsx"></script>
   <script type="module" src="/index.tsx"></script>
 </body>
 </html>
