--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
       /* For a smooth font experience */
       @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap');
       @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@900&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
       body {
         font-family: 'Inter', sans-serif;
       }
       .font-orbitron {
         font-family: 'Orbitron', sans-serif;
       }
+      .font-audiowide {
+        font-family: 'Audiowide', cursive;
+      }
     </style>
   <script type="importmap">
-  {
-    "imports": {
-      "react": "https://esm.sh/react@18.2.0",
-      "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
-      "react-dom/": "https://esm.sh/react-dom@18.2.0/",
-      "react/": "https://esm.sh/react@18.2.0/"
-    }
+{
+  "imports": {
+    "react": "https://esm.sh/react@^19.1.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
+    "react/": "https://esm.sh/react@^19.1.0/"
   }
-  </script>
-<!-- Load Babel to transpile JSX in the browser -->
-<script src="https://unpkg.com/@babel/standalone@7.24.7/babel.min.js"></script>
+}
+</script>
 <link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-white dark:bg-slate-900 antialiased">
+  <body class="bg-slate-900 antialiased">
     <div id="root"></div>
-    <!-- Set type to "text/babel" and add data-presets to enable transpilation -->
-    <script type="text/babel" data-type="module" data-presets="react,typescript" src="./index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   <script type="module" src="/index.tsx"></script>
 </body>
 </html>
